fixed visibility unit test

--- a/views/scss/pci-manager.scss
+++ b/views/scss/pci-manager.scss
@@ -32,6 +32,7 @@
         }
         ul.files{
             overflow-y:auto;
+            min-height: 300px;
         }
         .pci-list-element{
             cursor: default !important;
